# CSC481-M5

./: CMakeLists.txt  README.md
CSC-481-Engine-Design/: CMakeLists.txt  README.md
CSC-481-Engine-Design/include/engine/: Client.h  ColliderComponent.h  Collision.h  Component.h  Engine.h  Event.h  EventManager.h  GameObject.h  GameObjectAllocator.hpp  GameObjectPool.hpp  GravityComponent.h  Input.h  InputComponent.h  NetworkComponent.h  NetworkTypes.h  RenderComponent.h  Timeline.h  TransformComponent.h  Types.h
CSC-481-Engine-Design/src/: Client.cpp  Engine.cpp  EventManager.cpp  GameObjectAllocator.cpp  GameObjectPool.cpp  Input.cpp  RenderComponent.cpp  Timeline.cpp
CSC-481-rwdorroh-Game/: CMakeLists.txt  README.md
CSC-481-rwdorroh-Game/boss/: BossComponent.h  DashComponent.h  HealthComponent.h  PlayerShootComponent.h  ProjectileComponent.h  SinusoidalProjectileComponent.h  TagComponent.h  bossActions.h  bossGame.cpp
CSC-481-rwdorroh-Game/game/: Actions.h  CameraComponent.h  main.cpp
CSC-481-rwdorroh-Game/server/: Server.cpp
